--- a/example/code_generation/README
+++ b/example/code_generation/README
@@ -30,7 +30,7 @@ multiple packages and subsystems, which include:
 	- Code Server: From this directory, use the following command
 	  to build the Code Server:
 
-		$ make -C ../../code-server/standalone all
+		$ make -C ../../code-server all
 
 	- Gemm Application: Finally, the client application can be
 	  built using the following command:
@@ -48,7 +48,7 @@ The Harmony Server and Code Server must be instructed how to
 communicate with each other and the client application.  At a minimum,
 this can be accomplished by defining CODEGEN_SERVER_URL and
 CODEGEN_TARGET_URL Harmony configuration variables.  See the README
-file in ../../code-server/standalone for more details.
+file in ../../code-server for more details.
 
 Since the search sapce of this application has 5 dimensions, the
 Harmony configuration key PRO_SIMPLEX_SIZE should be at least 6
