--- a/README
+++ b/README
@@ -11,6 +11,7 @@ build/       : source files
 code-server/ : CHiLL-based code generation server
 doc/         : documentation
 example/     : several demo examples
+WIP/         : Works in progress
 
 * ================
 * Building Harmony
