--- a/example/code_generation/README
+++ b/example/code_generation/README
@@ -46,9 +46,9 @@ SSH must be enabled between any hosts involved.
 
 The Harmony Server and Code Server must be instructed how to
 communicate with each other and the client application.  At a minimum,
-this can be accomplished by defining CODEGEN_SERVER_URL and
-CODEGEN_TARGET_URL Harmony configuration variables.  See the README
-file in ../../code-server for more details.
+this can be accomplished by defining SERVER_URL and TARGET_URL Harmony
+configuration variables.  See the README file in ../../code-server for
+more details.
 
 Since the search sapce of this application has 5 dimensions, the
 Harmony configuration key SIMPLEX_SIZE should be at least 6 (eg. N+1).
