--- a/example/client_api/README
+++ b/example/client_api/README
@@ -28,9 +28,9 @@ will begin a simple tuning example.
 
     $ example_c
 
-To run in server mode, you can use the HARMONY_S_HOST and
-HARMONY_S_PORT environment variables:
+To run in server mode, you can use the HARMONY_HOST and HARMONY_PORT
+environment variables:
 
-    $ HARMONY_S_HOST=h.server.org HARMONY_S_PORT=2012 example_c
+    $ HARMONY_HOST=h.server.org HARMONY_PORT=2012 example_c
 
 See the top-level README file for details.
